try to fix new custom Junit Annotation module dependency
git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@1891337 13f79535-47bb-0310-9956-ffa450edef68