@@ -261,6 +261,7 @@ subprojects {
                     // opposed to the recommendation there, it doesn't work to add ... to the dependencies
                     // testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.7.1'
                     // gradles gradle-worker.jar is still not a JPMS module and thus runs as unnamed module
+                    '--add-exports','org.junit.platform.commons/org.junit.platform.commons.util=org.apache.poi.poi',
                     '--add-exports','org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED',
                     '--add-exports','org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED',
                 ]
